<resources>
    <string name="app_name">Image Search</string>

    <string name="hint_search">검색</string>

    <string name="doc_sort_accuracy">정확도순</string>
    <string name="doc_sort_recency">최신순</string>

    <string name="item_web">웹</string>

    <string name="next_web">상세 링크 열기</string>
    <string name="choose_browser">브라우저 선택</string>

    <string name="network_message_welcome_title">환영합니다.</string>
    <string name="network_message_welcome_message">검색어를 입력해주세요.</string>

    <string name="network_message_no_item_title">\'%s\'에 대한 검색 결과가 없습니다.</string>
    <string name="network_message_no_item_message">검색어의 철자가 정확한지 확인해주세요.\n비슷한 다른 검색어를 입력해보세요.\n단어의 수를 줄여보세요.</string>

    <string name="network_message_error_title">알 수 없는 문제가 발생하였습니다.</string>
    <string name="network_message_error_message">죄송합니다, 실행에 문제가 발생하였습니다.\n온라인으로 이동해 추가로 도움을 받아보시기 바랍니다.</string>

    <string name="retry">다시 시도</string>
</resources>