<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/v_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="380dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            tools:src="@drawable/brand_wearefriends3" />

        <TextView
            android:id="@+id/tv_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_error"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            tools:text="@string/network_message_no_item_title" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_error_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorTextGrey"
            android:textSize="12sp"
            tools:text="@string/network_message_no_item_message" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_image"
        tools:visibility="gone" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="0dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/header_h"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingTop="@dimen/header_h"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/tv_accuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:drawablePadding="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/doc_sort_accuracy"
                        android:textColor="@color/reactive_text"
                        app:drawableLeftCompat="@drawable/reactive_dot" />

                    <TextView
                        android:id="@+id/tv_recency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"

                        android:drawablePadding="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/doc_sort_recency"
                        android:textColor="@color/reactive_text"
                        app:drawableLeftCompat="@drawable/reactive_dot" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_collection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_collection" />
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_h"
                android:background="@color/colorPrimary"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:id="@+id/container_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_home"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_rounded_outline"
                        android:hint="@string/hint_search"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:paddingStart="15dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="8dp"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="#ababab"
                        android:textSize="13sp"
                        android:transitionName="search" />

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_search" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>